--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Projeto-AprendizadoJSP">
+    <wb-module deploy-name="AprendizadoJSP">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/Projeto-AprendizadoJSP/build/classes"/>
-        <property name="context-root" value="Projeto-AprendizadoJSP"/>
+        <property name="context-root" value="AprendizadoJSP"/>
+        <property name="java-output-path" value="/AprendizadoJSP/build/classes"/>
     </wb-module>
 </project-modules>
